Bring special height reflows (ugh) back to life.  b=349246